--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://stopnoanime.github.io/21-online/"
+      content="https://math-dude.github.io/ers/"
     />
     <meta property="og:image" content="/21-online/assets/og-image.png" />
     <base href="/" />
